Introduced i18next as multilingual support for home applications demo

--- a/appcell-resources/locales/en/translation.json
+++ b/appcell-resources/locales/en/translation.json
@@ -61,11 +61,11 @@
  ,"accountPassPlaceHolder": "Please enter a password."
  ,"boxUsedRelation": "Box used for relation"
  ,"confirmChangeContentEnter": "Changes in the content that you enter. Is it OK?"
- ,"confirmDeleteAccount": "You want to delete this account ( (1) ). Is it OK?"
- ,"confirmDeleteExternalCell": "You want to delete this external cell ( (1) ). Is it OK?"
- ,"confirmDeleteRelation": "You want to delete this relation ( (1):(2) ). Is it OK?"
- ,"confirmDeleteRelationAssign": "Remove the association between this relation( (1):(2) ). Is it OK?"
- ,"confirmDeleteRole": "You want to delete this role ( (1):(2) ). Is it OK?"
+ ,"confirmDeleteAccount": "You want to delete this account ( __value__ ). Is it OK?"
+ ,"confirmDeleteExternalCell": "You want to delete this external cell ( __value__ ). Is it OK?"
+ ,"confirmDeleteRelation": "You want to delete this relation ( __value1__:__value2__ ). Is it OK?"
+ ,"confirmDeleteRelationAssign": "Remove the association between this relation( __value1__:__value2__ ). Is it OK?"
+ ,"confirmDeleteRole": "You want to delete this role ( __value1__:__value2__ ). Is it OK?"
  ,"confirmInstallation": "Perform the installation. Is it OK?"
  ,"confirmNewPass": "Confirm (type new password again)"
  ,"errorValidateEndWithExternalCell": "External cell URL must end with '/'"
@@ -94,7 +94,7 @@
  ,"pleaseEnterPassword": "Please enter a password."
  ,"pleaseValidExternalCellUrl": "Please enter valid external cell URL"
  ,"pleaseValidSchemaURL": "Please enter valid schema URL"
- ,"removeAssociationRole": "Remove the association between this role( (1):(2) ). Is it OK?"
+ ,"removeAssociationRole": "Remove the association between this role( __value1__:__value2__ ). Is it OK?"
  ,"selectBox": "Please select a Box"
  ,"selectBoxRole": "Select a Box that this role is to use"
  ,"selectExternalCell": "Please select a External Cell"
@@ -104,6 +104,29 @@
  ,"selectRoleAssign": "Please select the role to assign."
  ,"successChangePass": "You have successfully changed your password!<br>Please login again."
 
+ ,"Demo": {
+     "loginTitle1": "Welcome to the demo version home application"
+    ,"loginTitle2": "Selecting the login target cell is completed"
+    ,"loginTitle3": "Thank you for your hard work."
+    ,"mainTitle1": "You are now logged."
+    ,"mainTitle2": "side menu"
+    ,"mainTitle3": "Application installation"
+    ,"mainTitle4": "Installation Complete"
+    ,"mainTitle5": "Explanation End"
+    ,"loginTutorial1": "I will explain how to use the home application in the demo version.<br> Let's first enter the cell URL to log in. <br>This time the demo cell URL: <br>https://demo.personium.io/democell/ <br>I will try logging in to."
+    ,"loginTutorial2": "You can now access the cell you are logging in to. <br>Let's login to the cell. <br>Login ID to this cell and PASS<br>ID: me <br>PW: democell <br>"
+    ,"loginTutorial3": "This concludes the description of the demo home application."
+    ,"mainTutorial1": "Login succeeded. <br>Next, we will explain the function of home application. <br>Please select the menu icon in the upper right."
+    ,"mainTutorial2": "Then select the social icon next."
+    ,"mainTutorial3": "Then select the menu icon in the upper right corner."
+    ,"mainTutorial4": "The side menu has the following functions. <br> - Edit profile<br>You can change display name and description of your cell, profile picture.<br> - Change Password<br>You can change the password of the currently logged in account.<br> - Account<br>You can create and edit accounts that can log in to your cell.<br> - Role<br>You can create, edit, and delete roles.<br> - Relation<br>You can create, edit, and delete relationships.<br> - Log Out<br>Log out from the logged in cell."
+    ,"mainTutorial5": "Let's install the application this time.<br>Please select the black part on the left side of the screen and close the side menu."
+    ,"mainTutorial6": "Please select \"App Market\" icon in MENU."
+    ,"mainTutorial7": "MyBoard was been installed in the cell. <br>Let's select the MyBoard icon and start the application."
+    ,"mainTutorial8": "Let's log out at the end.<br>From the menu icon in the upper right, select Logout."
+    ,"applicationTitle": "Application"
+    ,"applicationTutorial": "Installed applications are displayed in \"installed\", <br>Applications not installed are displayed in \"Application list\". <br>Now I have not installed anything, so let's install MyBoard."
+ }
  ,"Dummy": {
      "MaintenanceTitle": "Maintenance announcement"
     ,"MaintenanceInfo": "Maintenance will be carried out on 6/14 AM 2: 00 - 4: 00."
