--- a/appcell-resources/locales/ja/translation.json
+++ b/appcell-resources/locales/ja/translation.json
@@ -61,11 +61,11 @@
  ,"accountPassPlaceHolder": "パスワードを入力して下さい。"
  ,"boxUsedRelation": "リレーションで使用するBOX"
  ,"confirmChangeContentEnter": "入力した内容で変更します。よろしいですか？"
- ,"confirmDeleteAccount": "このアカウントを削除します ( (1) )。 よろしいですか？"
- ,"confirmDeleteExternalCell": "この外部セルを削除します ( (1) )。 よろしいですか？"
- ,"confirmDeleteRelation": "このリレーションを削除します ( (1):(2) )。 よろしいですか？"
- ,"confirmDeleteRelationAssign": "このリレーションとの割り当てを削除します( (1):(2) )。 よろしいですか？"
- ,"confirmDeleteRole": "このロールを削除します ( (1):(2) )。 よろしいですか？"
+ ,"confirmDeleteAccount": "このアカウントを削除します ( __value__ )。 よろしいですか？"
+ ,"confirmDeleteExternalCell": "この外部セルを削除します ( __value__ )。 よろしいですか？"
+ ,"confirmDeleteRelation": "このリレーションを削除します ( __value1__:__value2__ )。 よろしいですか？"
+ ,"confirmDeleteRelationAssign": "このリレーションとの割り当てを削除します( __value1__:__value2__ )。 よろしいですか？"
+ ,"confirmDeleteRole": "このロールを削除します ( __value1__:__value2__ )。 よろしいですか？"
  ,"confirmInstallation": "インストールします。よろしいですか？"
  ,"confirmNewPass": "確認の為、パスワードを再度入力して下さい。"
  ,"errorValidateEndWithExternalCell": "外部セルのURLは最後に'/'を入れてください。"
@@ -94,7 +94,7 @@
  ,"pleaseEnterPassword": "パスワードを入力して下さい。"
  ,"pleaseValidExternalCellUrl": "有効な外部セルURLを入力して下さい。"
  ,"pleaseValidSchemaURL": "有効なスキーマURLを入力して下さい。"
- ,"removeAssociationRole": "このロールとの割り当てを削除します( (1):(2) )。 よろしいですか？"
+ ,"removeAssociationRole": "このロールとの割り当てを削除します( __value1__:__value2__ )。 よろしいですか？"
  ,"selectBox": "BOXを選択して下さい"
  ,"selectBoxRole": "このロールで使用するBOXを選択して下さい。"
  ,"selectExternalCell": "外部セルを選択して下さい"
@@ -104,6 +104,29 @@
  ,"selectRoleAssign": "割り当てるロールを選択して下さい。"
  ,"successChangePass": "パスワードを変更しました。<br>ログインし直して下さい。"
 
+ ,"Demo": {
+     "loginTitle1": "デモ版ホームアプリへようこそ"
+    ,"loginTitle2": "ログイン対象セルの選択完了"
+    ,"loginTitle3": "お疲れ様でした。"
+    ,"mainTitle1": "ログインしました。"
+    ,"mainTitle2": "サイドメニュー"
+    ,"mainTitle3": "アプリインストール"
+    ,"mainTitle4": "インストール完了"
+    ,"mainTitle5": "説明終了"
+    ,"loginTutorial1": "デモ版ではホームアプリの使い方についてご説明致します。<br />まずはログインするセルURLを入力しましょう。<br>今回はデモ用のセルURL:<br>https://demo.personium.io/democell/<br>にログインしてみます。"
+    ,"loginTutorial2": "これでログイン対象のセルへアクセス出来ました。<br>ではセルへログインしてみましょう。<br>今回のセルへのログインID及びPASSは<br>ID:me<br>PW:democell<br>になります。"
+    ,"loginTutorial3": "以上でデモホームアプリの説明を終了します。"
+    ,"mainTutorial1": "ログインに成功しました。<br>次にホームアプリの機能について説明します。<br>右上のメニューアイコンを選択して下さい。"
+    ,"mainTutorial2": "では次にsocialアイコンを選択して下さい。"
+    ,"mainTutorial3": "では次に右上のメニューアイコンを選択して下さい。"
+    ,"mainTutorial4": "サイドメニューには以下の機能があります。<br>・プロフィール編集<br>自セルの表示名や説明、プロフィール画像を変更する事が出来ます。<br>・パスワード変更<br>現在ログインしているアカウントのパスワードを変更する事が出来ます。<br>・アカウント<br>自セルへログイン出来るアカウントの作成や編集をすることが出来ます。<br>・ロール<br>ロールの作成・編集・削除を行うことが出来ます。<br>・リレーション<br>リレーションの作成・編集・削除を行うことが出来ます。<br>・ログアウト<br>ログインしているセルからログアウトします。"
+    ,"mainTutorial5": "では次にアプリケーションのインストールを行ってみましょう。<br>画面左の黒い部分を選択し、サイドメニューを閉じてください。"
+    ,"mainTutorial6": "MENUの中にある「App マーケット」アイコンを選択して下さい。"
+    ,"mainTutorial7": "セルにMyBoardがインストールされました。<br>MyBoardアイコンを選択し、アプリを起動してみましょう。"
+    ,"mainTutorial8": "最後にログアウトをしてみましょう。<br>右上のメニューアイコンから、ログアウトを選択して下さい。"
+    ,"applicationTitle": "アプリケーション"
+    ,"applicationTutorial": "インストール済みのアプリは「インストール済み」に<br>インストールしていないアプリは「アプリケーションリスト」に表示されています。<br>今は何もインストールされていないので、MyBoardをインストールしてみましょう。"
+ }
  ,"Dummy": {
      "MaintenanceTitle": "メンテナンスのお知らせ"
     ,"MaintenanceInfo": "6/14 AM2:00-4:00にメンテナンスを行います。"
