Implement the following correction  - Review validate check based on API reference

--- a/appcell-resources/locales/en/translation.json
+++ b/appcell-resources/locales/en/translation.json
@@ -69,9 +69,11 @@
  ,"confirmInstallation": "Perform the installation. Is it OK?"
  ,"confirmNewPass": "Confirm (type new password again)"
  ,"errorValidateEndWithExternalCell": "External cell URL must end with '/'"
+ ,"errorValidateFirstPossibleSpecialCharacters": "The only special character that can be used at the beginning is __value__ ."
  ,"errorValidateMaxLengthOver": "Size cannot exceed 51200 characters."
+ ,"errorValidateMultibyte": "Multibyte characters are not allowed."
  ,"errorValidateNameLength": "Name cannot exceed 128 characters."
- ,"errorValidateSpecialCharacters": "Special characters: only Åg-Åh & Åg_Åh are allowed."
+ ,"errorValidateSpecialCharacters": "Special characters: only __value__ are allowed."
  ,"errorValidateStartDomainNameSpecialCharacters": "Domain name cannot start with special character"
  ,"errorValidateStartExternalCellNameSpecialCharacters": "External cell name cannot start with special character"
  ,"errorValidateStartNameSpecialCharacters": "Name can not start with special character."
