--- a/appcell-resources/locales/ja/translation.json
+++ b/appcell-resources/locales/ja/translation.json
@@ -69,9 +69,11 @@
  ,"confirmInstallation": "インストールします。よろしいですか？"
  ,"confirmNewPass": "確認の為、パスワードを再度入力して下さい。"
  ,"errorValidateEndWithExternalCell": "外部セルのURLは最後に'/'を入れてください。"
+ ,"errorValidateFirstPossibleSpecialCharacters": "先頭に使用出来る特殊文字は __value__ のみです。"
  ,"errorValidateMaxLengthOver": "51,200文字以上は入力出来ません。"
+ ,"errorValidateMultibyte": "全角文字は使用出来ません。"
  ,"errorValidateNameLength": "名前は128文字以下で入力して下さい。"
- ,"errorValidateSpecialCharacters": "特殊文字は“-”と“_”のみ使用出来ます。"
+ ,"errorValidateSpecialCharacters": "特殊文字は __value__ のみ使用出来ます。"
  ,"errorValidateStartDomainNameSpecialCharacters": "ドメイン名は特殊文字で始めることは出来ません。"
  ,"errorValidateStartExternalCellNameSpecialCharacters": "外部セル名は特殊文字で始めることは出来ません。"
  ,"errorValidateStartNameSpecialCharacters": "名前は特殊文字で始めることは出来ません。"
