Implement the following correction  - Addition of language switching function

--- a/appcell-resources/locales/en/translation.json
+++ b/appcell-resources/locales/en/translation.json
@@ -12,6 +12,7 @@
  ,"AssigningRelation": "Assigning Relation"
  ,"AssigningRoles": "Assigning Roles"
  ,"Cancel": "Cancel"
+ ,"ChangeLng": "Language"
  ,"ChangePass": "Change Password"
  ,"Close": "Close"
  ,"Community": "Community"
@@ -37,10 +38,12 @@
  ,"EditProfile": "Edit Profile"
  ,"EditRelation": "Edit Relation"
  ,"EditRole": "Edit Role"
+ ,"English": "English"
  ,"Error": "Error"
  ,"Independent": "Independent"
  ,"Install": "Install"
  ,"Installed": "installed"
+ ,"Japanese": "Japanese"
  ,"Login": "LOGIN"
  ,"Logout": "Logout"
  ,"Menu": "Menu"
@@ -54,12 +57,14 @@
  ,"Role": "Role"
  ,"RoleList": "Role list"
  ,"Settings": "Settings"
+ ,"Setup": "setup"
  ,"Uninstall": "Uninstall"
  ,"Update": "Update"
  ,"WatchPublicBOX": "Watch public BOX"
  ,"accountNamePlaceHolder": "Please enter the account name."
  ,"accountPassPlaceHolder": "Please enter a password."
  ,"boxUsedRelation": "Box used for relation"
+ ,"changeLanguageDescription": "Please select the language to display."
  ,"confirmChangeContentEnter": "Changes in the content that you enter. Is it OK?"
  ,"confirmDeleteAccount": "You want to delete this account ( __value__ ). Is it OK?"
  ,"confirmDeleteExternalCell": "You want to delete this external cell ( __value__ ). Is it OK?"
@@ -88,6 +93,7 @@
  ,"newPassPlaceHolder":"New Password (6 to 32 Character, Character Type(Half Size Alphanumeric, '-', '_'))"
  ,"notExistTargetCell": "The target cell does not exist."
  ,"notPermissionView": "You do not have view permission."
+ ,"notSelectTarget": "It is not selected."
  ,"passwordNotMatch": "Password do not match. Please enter the correct password."
  ,"pleaseBetweenCharacter": "Please enter between 6 to 32 characters."
  ,"pleaseCharacterType": "Please enter Character Type(Half Size Alphanumeric, '-', '_')"
