--- a/appcell-resources/locales/ja/translation.json
+++ b/appcell-resources/locales/ja/translation.json
@@ -12,6 +12,7 @@
  ,"AssigningRelation": "リレーション割り当て"
  ,"AssigningRoles": "ロール割り当て"
  ,"Cancel": "キャンセル"
+ ,"ChangeLng": "言語"
  ,"ChangePass": "パスワード変更"
  ,"Close": "閉じる"
  ,"Community": "コミュニティ"
@@ -37,10 +38,12 @@
  ,"EditProfile": "プロフィール編集"
  ,"EditRelation": "リレーション編集"
  ,"EditRole": "ロール編集"
+ ,"English": "英語"
  ,"Error": "エラー"
  ,"Independent": "無所属"
  ,"Install": "インストール"
  ,"Installed": "インストール済み"
+ ,"Japanese": "日本語"
  ,"Login": "ログイン"
  ,"Logout": "ログアウト"
  ,"Menu": "メニュー"
@@ -54,12 +57,14 @@
  ,"Role": "ロール"
  ,"RoleList": "ロール一覧"
  ,"Settings": "設定"
+ ,"Setup": "設定"
  ,"Uninstall": "アンインストール"
  ,"Update": "変更"
  ,"WatchPublicBOX": "公開BOX閲覧"
  ,"accountNamePlaceHolder": "アカウント名を入力して下さい。"
  ,"accountPassPlaceHolder": "パスワードを入力して下さい。"
  ,"boxUsedRelation": "リレーションで使用するBOX"
+ ,"changeLanguageDescription": "表示する言語を選択して下さい。"
  ,"confirmChangeContentEnter": "入力した内容で変更します。よろしいですか？"
  ,"confirmDeleteAccount": "このアカウントを削除します ( __value__ )。 よろしいですか？"
  ,"confirmDeleteExternalCell": "この外部セルを削除します ( __value__ )。 よろしいですか？"
@@ -88,6 +93,7 @@
  ,"newPassPlaceHolder":"新しいパスワード (6～32文字, 入力可能文字(半角英数字, '-', '_'))"
  ,"notExistTargetCell": "対象のセルが存在しません。"
  ,"notPermissionView": "閲覧権限がありません。"
+ ,"notSelectTarget": "選択されていません。"
  ,"passwordNotMatch": "パスワードが一致していません。 正しく入力して下さい。"
  ,"pleaseBetweenCharacter": "6～32文字で入力して下さい。"
  ,"pleaseCharacterType": "入力出来る文字は半角英数字、'-'、 '_'のみです。"
