Change language so that refreshing is not done at language switching time

--- a/appcell-resources/locales/en/translation.json
+++ b/appcell-resources/locales/en/translation.json
@@ -1,8 +1,11 @@
 {
   "Account": "Account"
+ ,"AccountTitle": "$t(Account): {{title}}"
  ,"Add": "Add"
  ,"AddExternalCell": "Add External Cell"
+ ,"AddExternalCellPlus": "＋ Add External Cell"
  ,"AddRole": "Add Role"
+ ,"AddRolePlus": "＋ Add Role"
  ,"Application": "Application"
  ,"ApplicationList": "application list"
  ,"AppMarket": "App Market"
@@ -11,6 +14,7 @@
  ,"AssignRoleMulti": "Assign Role (s)"
  ,"AssigningRelation": "Assigning Relation"
  ,"AssigningRoles": "Assigning Roles"
+ ,"AssigningRolesPlus": "＋ Assigning Roles"
  ,"Cancel": "Cancel"
  ,"ChangeLng": "Language"
  ,"ChangePass": "Change Password"
@@ -18,9 +22,12 @@
  ,"Community": "Community"
  ,"Create": "Create"
  ,"CreateAccount": "Create Account"
+ ,"CreateAccountPlus": "＋ Create Account"
  ,"CreateExternalCell": "Create External Cell"
+ ,"CreateExternalCellPlus": "＋ Create External Cell"
  ,"CreateRelation": "Create Relation"
  ,"CreateRole": "Create Role"
+ ,"CreateRolePlus": "＋ Create Role"
  ,"Del": "del"
  ,"DeleteAccount": "Delete Account"
  ,"DeleteAssigningRelation": "Delete Assigning Relation"
@@ -48,8 +55,10 @@
  ,"Logout": "Logout"
  ,"Menu": "Menu"
  ,"Name": "Name"
+ ,"Overview": "Overview"
  ,"Password": "Password"
  ,"ProfileImage": "Profile Image"
+ ,"Provider": "Provider:"
  ,"PublicBOX": "Public BOX"
  ,"Register": "Register"
  ,"ReLogin": "Re-Login"
@@ -66,19 +75,19 @@
  ,"boxUsedRelation": "Box used for relation"
  ,"changeLanguageDescription": "Please select the language to display."
  ,"confirmChangeContentEnter": "Changes in the content that you enter. Is it OK?"
- ,"confirmDeleteAccount": "You want to delete this account ( __value__ ). Is it OK?"
- ,"confirmDeleteExternalCell": "You want to delete this external cell ( __value__ ). Is it OK?"
- ,"confirmDeleteRelation": "You want to delete this relation ( __value1__:__value2__ ). Is it OK?"
- ,"confirmDeleteRelationAssign": "Remove the association between this relation( __value1__:__value2__ ). Is it OK?"
- ,"confirmDeleteRole": "You want to delete this role ( __value1__:__value2__ ). Is it OK?"
+ ,"confirmDeleteAccount": "You want to delete this account ( {{value}} ). Is it OK?"
+ ,"confirmDeleteExternalCell": "You want to delete this external cell ( {{value}} ). Is it OK?"
+ ,"confirmDeleteRelation": "You want to delete this relation ( {{value1}}:{{value2}} ). Is it OK?"
+ ,"confirmDeleteRelationAssign": "Remove the association between this relation( {{value1}}:{{value2}} ). Is it OK?"
+ ,"confirmDeleteRole": "You want to delete this role ( {{value1}}:{{value2}} ). Is it OK?"
  ,"confirmInstallation": "Perform the installation. Is it OK?"
  ,"confirmNewPass": "Confirm (type new password again)"
  ,"errorValidateEndWithExternalCell": "External cell URL must end with '/'"
- ,"errorValidateFirstPossibleSpecialCharacters": "The only special character that can be used at the beginning is __value__ ."
+ ,"errorValidateFirstPossibleSpecialCharacters": "The only special character that can be used at the beginning is {{value}} ."
  ,"errorValidateMaxLengthOver": "Size cannot exceed 51200 characters."
  ,"errorValidateMultibyte": "Multibyte characters are not allowed."
  ,"errorValidateNameLength": "Name cannot exceed 128 characters."
- ,"errorValidateSpecialCharacters": "Special characters: only __value__ are allowed."
+ ,"errorValidateSpecialCharacters": "Special characters: only {{value}} are allowed."
  ,"errorValidateStartDomainNameSpecialCharacters": "Domain name cannot start with special character"
  ,"errorValidateStartExternalCellNameSpecialCharacters": "External cell name cannot start with special character"
  ,"errorValidateStartNameSpecialCharacters": "Name can not start with special character."
@@ -102,7 +111,7 @@
  ,"pleaseEnterPassword": "Please enter a password."
  ,"pleaseValidExternalCellUrl": "Please enter valid external cell URL"
  ,"pleaseValidSchemaURL": "Please enter valid schema URL"
- ,"removeAssociationRole": "Remove the association between this role( __value1__:__value2__ ). Is it OK?"
+ ,"removeAssociationRole": "Remove the association between this role( {{value1}}:{{value2}} ). Is it OK?"
  ,"selectBox": "Please select a Box"
  ,"selectBoxRole": "Select a Box that this role is to use"
  ,"selectExternalCell": "Please select a External Cell"
