--- a/appcell-resources/locales/ja/translation.json
+++ b/appcell-resources/locales/ja/translation.json
@@ -1,8 +1,11 @@
 {
   "Account": "アカウント"
+ ,"AccountTitle": "$t(Account): {{title}}"
  ,"Add": "追加"
  ,"AddExternalCell": "外部セル追加"
+ ,"AddExternalCellPlus": "＋ 外部セル追加"
  ,"AddRole": "ロール追加"
+ ,"AddRolePlus": "＋ ロール追加"
  ,"Application": "アプリケーション"
  ,"ApplicationList": "すべてのアプリケーション"
  ,"AppMarket": "App マーケット"
@@ -11,6 +14,7 @@
  ,"AssignRoleMulti": "ロール割り当て (複数可)"
  ,"AssigningRelation": "リレーション割り当て"
  ,"AssigningRoles": "ロール割り当て"
+ ,"AssigningRolesPlus": "＋ ロール割り当て"
  ,"Cancel": "キャンセル"
  ,"ChangeLng": "言語"
  ,"ChangePass": "パスワード変更"
@@ -18,9 +22,12 @@
  ,"Community": "コミュニティ"
  ,"Create": "作成"
  ,"CreateAccount": "新規アカウント"
+ ,"CreateAccountPlus": "＋ 新規アカウント"
  ,"CreateExternalCell": "新規外部セル"
+ ,"CreateExternalCellPlus": "＋ 新規外部セル"
  ,"CreateRelation": "新規リレーション"
  ,"CreateRole": "新規ロール"
+ ,"CreateRolePlus": "＋ 新規ロール"
  ,"Del": "削除"
  ,"DeleteAccount": "アカウント削除"
  ,"DeleteAssigningRelation": "リレーション割り当て削除"
@@ -48,8 +55,10 @@
  ,"Logout": "ログアウト"
  ,"Menu": "メニュー"
  ,"Name": "名前"
+ ,"Overview": "概要"
  ,"Password": "パスワード"
  ,"ProfileImage": "プロフィール画像"
+ ,"Provider": "提供元:"
  ,"PublicBOX": "公開BOX"
  ,"Register": "登録"
  ,"ReLogin": "再ログイン"
@@ -66,19 +75,19 @@
  ,"boxUsedRelation": "リレーションで使用するBOX"
  ,"changeLanguageDescription": "表示する言語を選択して下さい。"
  ,"confirmChangeContentEnter": "入力した内容で変更します。よろしいですか？"
- ,"confirmDeleteAccount": "このアカウントを削除します ( __value__ )。 よろしいですか？"
- ,"confirmDeleteExternalCell": "この外部セルを削除します ( __value__ )。 よろしいですか？"
- ,"confirmDeleteRelation": "このリレーションを削除します ( __value1__:__value2__ )。 よろしいですか？"
- ,"confirmDeleteRelationAssign": "このリレーションとの割り当てを削除します( __value1__:__value2__ )。 よろしいですか？"
- ,"confirmDeleteRole": "このロールを削除します ( __value1__:__value2__ )。 よろしいですか？"
+ ,"confirmDeleteAccount": "このアカウントを削除します ( {{value}} )。 よろしいですか？"
+ ,"confirmDeleteExternalCell": "この外部セルを削除します ( {{value}} )。 よろしいですか？"
+ ,"confirmDeleteRelation": "このリレーションを削除します ( {{value1}}:{{value2}} )。 よろしいですか？"
+ ,"confirmDeleteRelationAssign": "このリレーションとの割り当てを削除します( {{value1}}:{{value2}} )。 よろしいですか？"
+ ,"confirmDeleteRole": "このロールを削除します ( {{value1}}:{{value2}} )。 よろしいですか？"
  ,"confirmInstallation": "インストールします。よろしいですか？"
  ,"confirmNewPass": "確認の為、パスワードを再度入力して下さい。"
  ,"errorValidateEndWithExternalCell": "外部セルのURLは最後に'/'を入れてください。"
- ,"errorValidateFirstPossibleSpecialCharacters": "先頭に使用出来る特殊文字は __value__ のみです。"
+ ,"errorValidateFirstPossibleSpecialCharacters": "先頭に使用出来る特殊文字は {{value}} のみです。"
  ,"errorValidateMaxLengthOver": "51,200文字以上は入力出来ません。"
  ,"errorValidateMultibyte": "全角文字は使用出来ません。"
  ,"errorValidateNameLength": "名前は128文字以下で入力して下さい。"
- ,"errorValidateSpecialCharacters": "特殊文字は __value__ のみ使用出来ます。"
+ ,"errorValidateSpecialCharacters": "特殊文字は {{value}} のみ使用出来ます。"
  ,"errorValidateStartDomainNameSpecialCharacters": "ドメイン名は特殊文字で始めることは出来ません。"
  ,"errorValidateStartExternalCellNameSpecialCharacters": "外部セル名は特殊文字で始めることは出来ません。"
  ,"errorValidateStartNameSpecialCharacters": "名前は特殊文字で始めることは出来ません。"
@@ -102,7 +111,7 @@
  ,"pleaseEnterPassword": "パスワードを入力して下さい。"
  ,"pleaseValidExternalCellUrl": "有効な外部セルURLを入力して下さい。"
  ,"pleaseValidSchemaURL": "有効なスキーマURLを入力して下さい。"
- ,"removeAssociationRole": "このロールとの割り当てを削除します( __value1__:__value2__ )。 よろしいですか？"
+ ,"removeAssociationRole": "このロールとの割り当てを削除します( {{value1}}:{{value2}} )。 よろしいですか？"
  ,"selectBox": "BOXを選択して下さい"
  ,"selectBoxRole": "このロールで使用するBOXを選択して下さい。"
  ,"selectExternalCell": "外部セルを選択して下さい"
