Multilingual text support for file uploading

--- a/appcell-resources/locales/en/translation.json
+++ b/appcell-resources/locales/en/translation.json
@@ -65,6 +65,7 @@
  ,"Relation": "Relation"
  ,"Role": "Role"
  ,"RoleList": "Role list"
+ ,"SelectFile": "Select File"
  ,"Settings": "Settings"
  ,"Setup": "setup"
  ,"Uninstall": "Uninstall"
