--- a/appcell-resources/locales/ja/translation.json
+++ b/appcell-resources/locales/ja/translation.json
@@ -65,6 +65,7 @@
  ,"Relation": "リレーション"
  ,"Role": "ロール"
  ,"RoleList": "ロール一覧"
+ ,"SelectFile": "ファイル選択"
  ,"Settings": "設定"
  ,"Setup": "設定"
  ,"Uninstall": "アンインストール"
