Correspondence of issue # 44  - I did not reproduce the phenomenon, but I changed the Double-byte character to Half-width character.

--- a/appcell-resources/locales/en/translation.json
+++ b/appcell-resources/locales/en/translation.json
@@ -3,9 +3,9 @@
  ,"AccountTitle": "$t(Account): {{title}}"
  ,"Add": "Add"
  ,"AddExternalCell": "Add External Cell"
- ,"AddExternalCellPlus": "＋ Add External Cell"
+ ,"AddExternalCellPlus": "+ Add External Cell"
  ,"AddRole": "Add Role"
- ,"AddRolePlus": "＋ Add Role"
+ ,"AddRolePlus": "+ Add Role"
  ,"Application": "Application"
  ,"ApplicationList": "application list"
  ,"AppMarket": "App Market"
@@ -14,7 +14,7 @@
  ,"AssignRoleMulti": "Assign Role (s)"
  ,"AssigningRelation": "Assigning Relation"
  ,"AssigningRoles": "Assigning Roles"
- ,"AssigningRolesPlus": "＋ Assigning Roles"
+ ,"AssigningRolesPlus": "+ Assigning Roles"
  ,"Cancel": "Cancel"
  ,"ChangeLng": "Language"
  ,"ChangePass": "Change Password"
@@ -22,12 +22,13 @@
  ,"Community": "Community"
  ,"Create": "Create"
  ,"CreateAccount": "Create Account"
- ,"CreateAccountPlus": "＋ Create Account"
+ ,"CreateAccountPlus": "+ Create Account"
  ,"CreateExternalCell": "Create External Cell"
- ,"CreateExternalCellPlus": "＋ Create External Cell"
+ ,"CreateExternalCellPlus": "+ Create External Cell"
  ,"CreateRelation": "Create Relation"
+ ,"CreateRelationPlus": "+ 新規リレーション"
  ,"CreateRole": "Create Role"
- ,"CreateRolePlus": "＋ Create Role"
+ ,"CreateRolePlus": "+ Create Role"
  ,"Del": "del"
  ,"DeleteAccount": "Delete Account"
  ,"DeleteAssigningRelation": "Delete Assigning Relation"
