--- a/appcell-resources/locales/ja/translation.json
+++ b/appcell-resources/locales/ja/translation.json
@@ -3,9 +3,9 @@
  ,"AccountTitle": "$t(Account): {{title}}"
  ,"Add": "追加"
  ,"AddExternalCell": "外部セル追加"
- ,"AddExternalCellPlus": "＋ 外部セル追加"
+ ,"AddExternalCellPlus": "+ 外部セル追加"
  ,"AddRole": "ロール追加"
- ,"AddRolePlus": "＋ ロール追加"
+ ,"AddRolePlus": "+ ロール追加"
  ,"Application": "アプリケーション"
  ,"ApplicationList": "すべてのアプリケーション"
  ,"AppMarket": "App マーケット"
@@ -14,7 +14,7 @@
  ,"AssignRoleMulti": "ロール割り当て (複数可)"
  ,"AssigningRelation": "リレーション割り当て"
  ,"AssigningRoles": "ロール割り当て"
- ,"AssigningRolesPlus": "＋ ロール割り当て"
+ ,"AssigningRolesPlus": "+ ロール割り当て"
  ,"Cancel": "キャンセル"
  ,"ChangeLng": "言語"
  ,"ChangePass": "パスワード変更"
@@ -22,12 +22,13 @@
  ,"Community": "コミュニティ"
  ,"Create": "作成"
  ,"CreateAccount": "新規アカウント"
- ,"CreateAccountPlus": "＋ 新規アカウント"
+ ,"CreateAccountPlus": "+ 新規アカウント"
  ,"CreateExternalCell": "新規外部セル"
- ,"CreateExternalCellPlus": "＋ 新規外部セル"
+ ,"CreateExternalCellPlus": "+ 新規外部セル"
  ,"CreateRelation": "新規リレーション"
+ ,"CreateRelationPlus": "+ 新規リレーション"
  ,"CreateRole": "新規ロール"
- ,"CreateRolePlus": "＋ 新規ロール"
+ ,"CreateRolePlus": "+ 新規ロール"
  ,"Del": "削除"
  ,"DeleteAccount": "アカウント削除"
  ,"DeleteAssigningRelation": "リレーション割り当て削除"
