Change the "application" of the side menu to "application management"  - Deactivate it because it is currently unimplemented

--- a/appcell-resources/locales/en/translation.json
+++ b/appcell-resources/locales/en/translation.json
@@ -6,7 +6,7 @@
  ,"AddExternalCellPlus": "+ Add External Cell"
  ,"AddRole": "Add Role"
  ,"AddRolePlus": "+ Add Role"
- ,"Application": "Application"
+ ,"Application": "Application management"
  ,"ApplicationList": "application list"
  ,"AppMarket": "App Market"
  ,"AppMarket_Organization": "Biz App Market"
