--- a/appcell-resources/locales/ja/translation.json
+++ b/appcell-resources/locales/ja/translation.json
@@ -6,7 +6,7 @@
  ,"AddExternalCellPlus": "+ 外部セル追加"
  ,"AddRole": "ロール追加"
  ,"AddRolePlus": "+ ロール追加"
- ,"Application": "アプリケーション"
+ ,"Application": "アプリ管理"
  ,"ApplicationList": "すべてのアプリケーション"
  ,"AppMarket": "App マーケット"
  ,"AppMarket_Organization": "Biz App マーケット"
