Added message function  - 1.Create menu page

--- a/appcell-resources/locales/en/translation.json
+++ b/appcell-resources/locales/en/translation.json
@@ -27,7 +27,7 @@
  ,"CreateExternalCell": "Create External Cell"
  ,"CreateExternalCellPlus": "+ Create External Cell"
  ,"CreateRelation": "Create Relation"
- ,"CreateRelationPlus": "+ 新規リレーション"
+ ,"CreateRelationPlus": "+ Create Relation"
  ,"CreateRole": "Create Role"
  ,"CreateRolePlus": "+ Create Role"
  ,"Del": "del"
