Added message function  - 2.Create Receive Message List

--- a/appcell-resources/locales/en/message.json
+++ b/appcell-resources/locales/en/message.json
@@ -1,5 +1,6 @@
 {
   "Message": "Message",
+  "NotSubject": "Not Subject",
   "ReceiveMessage": "Receive Message",
   "SendMessage": "Send Message",
   "CreateMessage": "Create Message"
