Added message function  - 3.Create Sent Message List

--- a/appcell-resources/locales/en/message.json
+++ b/appcell-resources/locales/en/message.json
@@ -1,7 +1,10 @@
 {
-  "Message": "Message",
   "NotSubject": "Not Subject",
   "ReceiveMessage": "Receive Message",
-  "SendMessage": "Send Message",
-  "CreateMessage": "Create Message"
+  "SentMessage": "Sent Message",
+  "CreateMessage": "Create Message",
+  "errorReceivedMessage": "We could not get the received message.",
+  "errorSentMessage": "Failed to get sent message.",
+  "notReceivedMessage": "There are no received messages.",
+  "notSentMessage": "There are no sent messages."
 }
