--- a/appcell-resources/locales/en/translation.json
+++ b/appcell-resources/locales/en/translation.json
@@ -56,12 +56,14 @@
  ,"Login": "LOGIN"
  ,"Logout": "Logout"
  ,"Menu": "Menu"
+ ,"Message": "Message"
  ,"Name": "Name"
  ,"Overview": "Overview"
  ,"Password": "Password"
  ,"ProfileImage": "Profile Image"
  ,"Provider": "Provider:"
  ,"PublicBOX": "Public BOX"
+ ,"QRScanner": "QRScanner"
  ,"Register": "Register"
  ,"ReLogin": "Re-Login"
  ,"Relation": "Relation"
@@ -114,6 +116,7 @@
  ,"pleaseEnterPassword": "Please enter a password."
  ,"pleaseValidExternalCellUrl": "Please enter valid external cell URL"
  ,"pleaseValidSchemaURL": "Please enter valid schema URL"
+ ,"qrscannerDescription": "Read the QR code."
  ,"removeAssociationRole": "Remove the association between this role( {{value1}}:{{value2}} ). Is it OK?"
  ,"selectBox": "Please select a Box"
  ,"selectBoxRole": "Select a Box that this role is to use"
