--- a/appcell-resources/locales/ja/translation.json
+++ b/appcell-resources/locales/ja/translation.json
@@ -56,12 +56,14 @@
  ,"Login": "ログイン"
  ,"Logout": "ログアウト"
  ,"Menu": "メニュー"
+ ,"Message": "メッセージ"
  ,"Name": "名前"
  ,"Overview": "概要"
  ,"Password": "パスワード"
  ,"ProfileImage": "プロフィール画像"
  ,"Provider": "提供元:"
  ,"PublicBOX": "公開BOX"
+ ,"QRScanner": "QR スキャナー"
  ,"Register": "登録"
  ,"ReLogin": "再ログイン"
  ,"Relation": "リレーション"
@@ -114,6 +116,7 @@
  ,"pleaseEnterPassword": "パスワードを入力して下さい。"
  ,"pleaseValidExternalCellUrl": "有効な外部セルURLを入力して下さい。"
  ,"pleaseValidSchemaURL": "有効なスキーマURLを入力して下さい。"
+ ,"qrscannerDescription": "QRコードを読み取ります。"
  ,"removeAssociationRole": "このロールとの割り当てを削除します( {{value1}}:{{value2}} )。 よろしいですか？"
  ,"selectBox": "BOXを選択して下さい"
  ,"selectBoxRole": "このロールで使用するBOXを選択して下さい。"
