--- a/appcell-resources/locales/en/translation.json
+++ b/appcell-resources/locales/en/translation.json
@@ -87,6 +87,7 @@
  ,"confirmDeleteRole": "You want to delete this role ( {{value1}}:{{value2}} ). Is it OK?"
  ,"confirmInstallation": "Perform the installation. Is it OK?"
  ,"confirmNewPass": "Confirm (type new password again)"
+ ,"errorValidateEndWithCell": "Cell URL must end with '/'"
  ,"errorValidateEndWithExternalCell": "External cell URL must end with '/'"
  ,"errorValidateFirstPossibleSpecialCharacters": "The only special character that can be used at the beginning is {{value}} ."
  ,"errorValidateMaxLengthOver": "Size cannot exceed 51200 characters."
