Added message function  - 5.Create reply function, delete function, badge function to display the number of messages

--- a/appcell-resources/locales/en/message.json
+++ b/appcell-resources/locales/en/message.json
@@ -1,4 +1,7 @@
 {
+  "CreateNewMessage": "Create Message",
+  "CreateReplyMessage": "Create reply message",
+  "Destination": "Destination",
   "DestProfName": "Destination Profile Name",
   "DestCellURL": "Destination Cell URL",
   "MessageBody": "Body",
@@ -7,8 +10,8 @@
   "ReceiveMessage": "Receive Message",
   "Reply": "Reply",
   "Sent": "Sent",
+  "Sender": "Sender",
   "SentMessage": "Sent Message",
-  "CreateNewMessage": "Create Message",
   "errorReceivedMessage": "We could not get the received message.",
   "errorSentMessage": "Failed to get sent message.",
   "notReceivedMessage": "There are no received messages.",
