--- a/appcell-resources/locales/en/message.json
+++ b/appcell-resources/locales/en/message.json
@@ -12,6 +12,8 @@
   "Sent": "Sent",
   "From": "From",
   "SentMessage": "Sent Message",
+  "errorDeleteMessageNotFound": "Failed to delete the message. Message does not exist.",
+  "errorDeleteMessageCommunicationError": "Failed to delete the message. Please try again with some time.",
   "errorReceivedMessage": "We could not get the received message.",
   "errorSentMessage": "Failed to get sent message.",
   "notReceivedMessage": "There are no received messages.",
