--- a/appcell-resources/locales/ja/message.json
+++ b/appcell-resources/locales/ja/message.json
@@ -12,6 +12,8 @@
   "Sent": "送信",
   "From": "送信元",
   "SentMessage": "送信メッセージ",
+  "errorDeleteMessageNotFound": "メッセージの削除に失敗しました。メッセージが存在しません。",
+  "errorDeleteMessageCommunicationError": "メッセージの削除に失敗しました。時間を置いてもう一度お試しください。",
   "errorReceivedMessage": "受信したメッセージを取得出来ませんでした。",
   "errorSentMessage": "送信済みメッセージを取得出来ませんでした。",
   "notReceivedMessage": "受信したメッセージはありません。",
