AppMarketLess compatible 1.Application management function implementation

--- a/appcell-resources/locales/en/translation.json
+++ b/appcell-resources/locales/en/translation.json
@@ -7,6 +7,7 @@
  ,"AddRole": "Add Role"
  ,"AddRolePlus": "+ Add Role"
  ,"Application": "Application management"
+ ,"ApplicationDelete": "Application Delete"
  ,"ApplicationList": "application list"
  ,"AppMarket": "App Market"
  ,"AppMarket_Organization": "Biz App Market"
@@ -16,6 +17,8 @@
  ,"AssigningRelation": "Assigning Relation"
  ,"AssigningRoles": "Assigning Roles"
  ,"AssigningRolesPlus": "+ Assigning Roles"
+ ,"BoxInstall": "Box Install"
+ ,"BoxName": "Box Name"
  ,"Cancel": "Cancel"
  ,"ChangeLng": "Language"
  ,"ChangePass": "Change Password"
@@ -49,6 +52,7 @@
  ,"EditRole": "Edit Role"
  ,"English": "English"
  ,"Error": "Error"
+ ,"Failed": "Failed"
  ,"Independent": "Independent"
  ,"Install": "Install"
  ,"Installed": "installed"
@@ -69,14 +73,18 @@
  ,"Relation": "Relation"
  ,"Role": "Role"
  ,"RoleList": "Role list"
+ ,"SelectBar": "Select BarFile"
  ,"SelectFile": "Select File"
  ,"Settings": "Settings"
  ,"Setup": "setup"
+ ,"Status": "Status"
+ ,"Success": "success"
  ,"Uninstall": "Uninstall"
  ,"Update": "Update"
  ,"WatchPublicBOX": "Watch public BOX"
  ,"accountNamePlaceHolder": "Please enter the account name."
  ,"accountPassPlaceHolder": "Please enter a password."
+ ,"barfileUrlInput": "Please enter bar file URL."
  ,"boxUsedRelation": "Box used for relation"
  ,"changeLanguageDescription": "Please select the language to display."
  ,"confirmChangeContentEnter": "Changes in the content that you enter. Is it OK?"
@@ -87,6 +95,12 @@
  ,"confirmDeleteRole": "You want to delete this role ( {{value1}}:{{value2}} ). Is it OK?"
  ,"confirmInstallation": "Perform the installation. Is it OK?"
  ,"confirmNewPass": "Confirm (type new password again)"
+ ,"errorBarFileNotSelected": "The bar file is not selected."
+ ,"errorBarFileUrlNotEntered": "bar File URL is not entered"
+ ,"errorBoxStatusCommunication": "Communication failed. Specified Box does not exist or Please try again later."
+ ,"errorBoxStatusNotFound": "Box does not exist."
+ ,"errorFileFormat": "The file format is incorrect."
+ ,"errorReadingFile": "Failed to read the file."
  ,"errorValidateEndWithCell": "Cell URL must end with '/'"
  ,"errorValidateEndWithExternalCell": "External cell URL must end with '/'"
  ,"errorValidateFirstPossibleSpecialCharacters": "The only special character that can be used at the beginning is {{value}} ."
@@ -127,6 +141,7 @@
  ,"selectRole": "Please select a Role"
  ,"selectRoleAssign": "Please select the role to assign."
  ,"successChangePass": "You have successfully changed your password!<br>Please login again."
+ ,"warningBoxInstall": "Allow installing Box of unknown provider"
 
  ,"Demo": {
      "loginTitle1": "Welcome to the demo version home application"
