--- a/appcell-resources/locales/ja/translation.json
+++ b/appcell-resources/locales/ja/translation.json
@@ -7,6 +7,7 @@
  ,"AddRole": "ロール追加"
  ,"AddRolePlus": "+ ロール追加"
  ,"Application": "アプリ管理"
+ ,"ApplicationDelete": "アプリ削除"
  ,"ApplicationList": "すべてのアプリケーション"
  ,"AppMarket": "App マーケット"
  ,"AppMarket_Organization": "Biz App マーケット"
@@ -16,6 +17,8 @@
  ,"AssigningRelation": "リレーション割り当て"
  ,"AssigningRoles": "ロール割り当て"
  ,"AssigningRolesPlus": "+ ロール割り当て"
+ ,"BoxInstall": "Box インストール"
+ ,"BoxName": "Box名"
  ,"Cancel": "キャンセル"
  ,"ChangeLng": "言語"
  ,"ChangePass": "パスワード変更"
@@ -49,6 +52,7 @@
  ,"EditRole": "ロール編集"
  ,"English": "英語"
  ,"Error": "エラー"
+ ,"Failed": "失敗"
  ,"Independent": "無所属"
  ,"Install": "インストール"
  ,"Installed": "インストール済み"
@@ -69,14 +73,18 @@
  ,"Relation": "リレーション"
  ,"Role": "ロール"
  ,"RoleList": "ロール一覧"
+ ,"SelectBar": "Barファイル選択"
  ,"SelectFile": "ファイル選択"
  ,"Settings": "設定"
  ,"Setup": "設定"
+ ,"Status": "状態"
+ ,"Success": "成功"
  ,"Uninstall": "アンインストール"
  ,"Update": "変更"
  ,"WatchPublicBOX": "公開BOX閲覧"
  ,"accountNamePlaceHolder": "アカウント名を入力して下さい。"
  ,"accountPassPlaceHolder": "パスワードを入力して下さい。"
+ ,"barfileUrlInput": "barファイルURLを入力して下さい。"
  ,"boxUsedRelation": "リレーションで使用するBOX"
  ,"changeLanguageDescription": "表示する言語を選択して下さい。"
  ,"confirmChangeContentEnter": "入力した内容で変更します。よろしいですか？"
@@ -87,6 +95,12 @@
  ,"confirmDeleteRole": "このロールを削除します ( {{value1}}:{{value2}} )。 よろしいですか？"
  ,"confirmInstallation": "インストールします。よろしいですか？"
  ,"confirmNewPass": "確認の為、パスワードを再度入力して下さい。"
+ ,"errorBarFileNotSelected": "barファイルが選択されていません。"
+ ,"errorBarFileUrlNotEntered": "barファイルのURLが入力されていません。"
+ ,"errorBoxStatusCommunication": "通信に失敗しました。時間を置いてもう一度お試しください。"
+ ,"errorBoxStatusNotFound": "Boxが存在しません。"
+ ,"errorFileFormat": "ファイル形式が正しくありません。"
+ ,"errorReadingFile": "ファイルの読み込みに失敗しました。"
  ,"errorValidateEndWithCell": "セルのURLは最後に'/'を入れてください。"
  ,"errorValidateEndWithExternalCell": "外部セルのURLは最後に'/'を入れてください。"
  ,"errorValidateFirstPossibleSpecialCharacters": "先頭に使用出来る特殊文字は {{value}} のみです。"
@@ -127,6 +141,7 @@
  ,"selectRelationAssign": "割り当てる外部セルを選択して下さい。"
  ,"selectRoleAssign": "割り当てるロールを選択して下さい。"
  ,"successChangePass": "パスワードを変更しました。<br>ログインし直して下さい。"
+ ,"warningBoxInstall": "提供元が不明のBoxインストールを許可する"
 
  ,"Demo": {
      "loginTitle1": "デモ版ホームアプリへようこそ"
