--- a/appcell-resources/locales/en/translation.json
+++ b/appcell-resources/locales/en/translation.json
@@ -56,7 +56,7 @@
  ,"Independent": "Independent"
  ,"Install": "Install"
  ,"Installed": "installed"
- ,"Japanese": "Japanese"
+ ,"Japanese": "日本語"
  ,"Login": "LOGIN"
  ,"Logout": "Logout"
  ,"Menu": "Menu"
@@ -67,6 +67,7 @@
  ,"ProfileImage": "Profile Image"
  ,"Provider": "Provider:"
  ,"PublicBOX": "Public BOX"
+ ,"QRCode": "QR Code (Cell URL)"
  ,"QRScanner": "QRScanner"
  ,"Register": "Register"
  ,"ReLogin": "Re-Login"
