--- a/appcell-resources/locales/ja/translation.json
+++ b/appcell-resources/locales/ja/translation.json
@@ -50,7 +50,7 @@
  ,"EditProfile": "プロフィール編集"
  ,"EditRelation": "リレーション編集"
  ,"EditRole": "ロール編集"
- ,"English": "英語"
+ ,"English": "English"
  ,"Error": "エラー"
  ,"Failed": "失敗"
  ,"Independent": "無所属"
@@ -67,6 +67,7 @@
  ,"ProfileImage": "プロフィール画像"
  ,"Provider": "提供元:"
  ,"PublicBOX": "公開BOX"
+ ,"QRCode": "QRコード（セルURLs）"
  ,"QRScanner": "QR スキャナー"
  ,"Register": "登録"
  ,"ReLogin": "再ログイン"
