--- a/appcell-resources/locales/en/translation.json
+++ b/appcell-resources/locales/en/translation.json
@@ -149,7 +149,7 @@
      "loginTitle1": "Welcome to the demo version home application"
     ,"loginTitle2": "Selecting the login target cell is completed"
     ,"loginTitle3": "Thank you for your hard work."
-    ,"mainTitle1": "You are now logged."
+    ,"mainTitle1": "You are now logged in."
     ,"mainTitle2": "side menu"
     ,"mainTitle3": "Application installation"
     ,"mainTitle4": "Installation Complete"
@@ -158,8 +158,6 @@
     ,"loginTutorial2": "You can now access the cell you are logging in to. <br>Let's login to the cell. <br>Login ID to this cell and PASS<br>ID: me <br>PW: democell <br>"
     ,"loginTutorial3": "This concludes the description of the demo home application."
     ,"mainTutorial1": "Login succeeded. <br>Next, we will explain the function of home application. <br>Please select the menu icon in the upper right."
-    ,"mainTutorial2": "Then select the social icon next."
-    ,"mainTutorial3": "Then select the menu icon in the upper right corner."
     ,"mainTutorial4": "The side menu has the following functions. <br> - Edit profile<br>You can change display name and description of your cell, profile picture.<br> - Change Password<br>You can change the password of the currently logged in account.<br> - Account<br>You can create and edit accounts that can log in to your cell.<br> - Role<br>You can create, edit, and delete roles.<br> - Relation<br>You can create, edit, and delete relationships.<br> - Log Out<br>Log out from the logged in cell."
     ,"mainTutorial5": "Let's install the application this time.<br>Please select the black part on the left side of the screen and close the side menu."
     ,"mainTutorial6": "Please select \"App Market\" icon in MENU."
